# github-contributor-leaderboard

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  scheduled-pipeline.yml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  cloud-database-setup.md  operations.md  pipeline.md
migrations/: env.py
migrations/versions/: 001_add_scrape_history.py
scripts/: cleanup_and_scrape.py  cleanup_bots.py  init_budget_tables.py  init_db.py  init_scrape_history.py  migrate_enrichment_schema.py  recalculate_scores.py  setup_repos.py  test_bigquery.py
src/: __init__.py
src/api/: app.py
src/api/routes/: __init__.py  contributors.py  dashboard.py  jobs.py  leaderboard.py  repositories.py  scoring.py
src/api/schemas/: __init__.py  contributor.py  leaderboard.py  repository.py  scoring.py
src/api/templates/: dashboard.html  pipeline.html
src/core/: config.py
src/db/: __init__.py  database.py
src/db/models/: __init__.py  budget.py  contribution.py  enrichment.py  job.py  leaderboard.py  repository.py  scoring.py  scrape_history.py  user.py
src/enrichment/: __init__.py  github_enricher.py  github_enricher_sync.py  readme_parser.py
src/services/: __init__.py  bigquery_service.py  budget_service.py  contributor_service.py  github_service.py  job_service.py  leaderboard_service.py  repository_service.py  scoring_service.py
src/workers/: celery_app.py
src/workers/tasks/: enrichment_tasks.py  leaderboard_tasks.py  scrape_tasks.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_readme_parser.py  test_scoring_service.py
